# dl-lang

./: .gitignore  README.md  pyproject.toml
src/dl/: __main__.py
src/dl/codegen/: live_range.py  x64_codegen.py
src/dl/inter/: ic.py  instr.py  operand.py  operator.py
src/dl/lex/: lexer.py  tag.py  token.py
src/dl/semantic/: checker.py  env.py  type.py
src/dl/syntax/: parser.py
src/dl/tree/: ast.py  nodes.py
src/dlc/: __main__.py
src/dlc/codegen/: live_range.py  x64_codegen.py
src/dlc/inter/: basic_block.py  ic.py  instr.py  operator.py
src/dlc/lex/: lexer.py  tag.py
src/dlc/semantic/: checker.py
src/dlc/syntax/: parser.py
src/dlc/tree/: nodes.py  visitor.py
tests/: test_lexer.py
tests/inputs/: prog.dl
