[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlc"
version = "0.1.0"
description = "Compilador da linguagem DL"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "colorama>=0.4.6",
    "graphviz>=0.21",
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]